# ChangeLog of DirSubdirMakefile
# E-mail: wlf@zhishan-iot.tk

> version: v0.0.0
> date   : 2019-06-26
> note   : This is the first version of DirSubdirMakefile! It has following features:
           + easy-use and provides rich basic functions by entry makefile
           + high efficiency
           + high portability because of common directory structure
           + DirSubdirMakefile is a open-source project and is licensed under WTFPL2(https://wtfpl2.com/)

> version: v0.0.1
> date   : 
> note   : (1)support environment variable CFLAGS and add -Wall compiler option