@@ -9,20 +9,15 @@
 ###########################################################################
 
 ###########################################################
-##### [1] GENERATE TARGET
+##### [1] COLLECT NEEDED PARAMETERS
+###########################################################
 CUR_DIR_TAR  := $(notdir $(CURDIR))
 ###########################################################
 CFILES       := $(wildcard src/*.c)
-EXEFILES     := $(addprefix $(PATH_OBJ)/, $(subst .c, ,$(notdir $(CFILES))))
-CFLAGS       += -L$(PATH_OBJ) -ldep
 ###########################################################
+NEEDED_LIBS  := dep
 
 ###########################################################
-##### [2] START TO COMPILE
-###########################################################
-$(CUR_DIR_TAR): $(EXEFILES)
-###########################################################
-$(EXEFILES): $(PATH_OBJ)/%:$(CURDIR)/src/%.c
-	@$(ECHO) "CC  $<"
-	@$(CC) $< $(CFLAGS) -o $(PATH_OBJ)/"`$(BASENAME) $< .c`"
+##### [2] COMPILE
+include $(PATH_BUILD)/process.mk
 ###########################################################
