@@ -54,8 +54,8 @@
             <!-- 所需工具 -->
             <h2>所需工具</h2>
             <ul>
-                <li><a href="http://www.gnu.org/software/make/manual/make.html">gnu-make</a></li>
-                <li>C语言编译器 (需要在运行环境中配置相应的“CC”变量)</li>
+                <li><a href="http://www.gnu.org/software/make/manual/make.html">GNU Make</a></li>
+                <li>GCC (如需使用其他编译器，可通过改变在运行环境中的“CC”变量的值实现配置)</li>
             </ul>
 
             <!-- 目录结构 -->
