@@ -55,8 +55,8 @@
             <!-- Requirement -->
             <h2>Requirement</h2>
             <ul>
-                <li><a href="http://www.gnu.org/software/make/manual/make.html">gnu-make</a></li>
-                <li>a C compiler (need to be configured via environment varibale "CC")</li>
+                <li><a href="http://www.gnu.org/software/make/manual/make.html">GNU Make</a></li>
+                <li>GNU C compiler (it can be configured as other compiler via environment varibale "CC")</li>
             </ul>
 
             <!-- Directory Structure -->
